TEST_PROGRAMS/INVALID/15/assignment2.go
/* LHS '=' RHS with nonmatching lengths */

package error

var a, b int

func f(){
    a, b = 1
}
